--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>PPM Unifi</title>
+    <title>PPM Unifi - Giorgia Modi</title>
     <link rel="icon" href="favicon.png" >
     </head>
 
@@ -166,12 +166,6 @@
             <div class="main-article" style="border: none;">
 
                 <img src="https://picsum.photos/683/365" alt=img" class="img-fluid" style="width: 100%">
-                <!--
-                <div class="container">
-                    <img src="https://picsum.photos/683/365" class="img-fluid">
-                    <div class="top-left" > ULTIM'ORA</div>
-                </div>
-                -->
                 <br>
                 <div class="overtitle" style=" margin-top: 15px; margin-bottom: 0px">
                     <a href="#"> <i class="fa-solid fa-square"></i>
@@ -893,8 +887,8 @@
                                 </div>
                             </a>
                             <h2 class="swiper_art_title">
-                                <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum A</b>
+                                <a href="#">
+                                    Lorem Ipsum A
                                 </a>
                             </h2>
 
@@ -909,7 +903,7 @@
                             </a>
                             <h2 class="swiper_art_title">
                                 <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum B</b>
+                                    Lorem Ipsum B
                                 </a>
                             </h2>
 
@@ -923,8 +917,8 @@
                                 </div>
                             </a>
                             <h2 class="swiper_art_title">
-                                <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum C</b>
+                                <a href="#" >
+                                    Lorem Ipsum C
                                 </a>
                             </h2>
 
@@ -938,8 +932,8 @@
                                 </div>
                             </a>
                             <h2 class="swiper_art_title">
-                                <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum D</b>
+                                <a href="#" >
+                                    Lorem Ipsum D
                                 </a>
                             </h2>
 
@@ -953,8 +947,8 @@
                                 </div>
                             </a>
                             <h2 class="swiper_art_title">
-                                <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum E</b>
+                                <a href="#" >
+                                    Lorem Ipsum E
                                 </a>
                             </h2>
 
@@ -968,8 +962,8 @@
                                 </div>
                             </a>
                             <h2 class="swiper_art_title">
-                                <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum F</b>
+                                <a href="#" >
+                                    Lorem Ipsum F
                                 </a>
                             </h2>
 
@@ -983,8 +977,8 @@
                                 </div>
                             </a>
                             <h2 class="swiper_art_title">
-                                <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum G</b>
+                                <a href="#" >
+                                    Lorem Ipsum G
                                 </a>
                             </h2>
 
@@ -998,8 +992,8 @@
                                 </div>
                             </a>
                             <h2 class="swiper_art_title">
-                                <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum H</b>
+                                <a href="#" >
+                                    Lorem Ipsum H
                                 </a>
                             </h2>
 
@@ -1013,8 +1007,8 @@
                                 </div>
                             </a>
                             <h2 class="swiper_art_title">
-                                <a href="#" class="swiper_art_title">
-                                    <b>Lorem Ipsum I</b>
+                                <a href="#" >
+                                    Lorem Ipsum I
                                 </a>
                             </h2>
 
